# figment-directory

./: Cargo.toml  LICENSE  README.md
.github/workflows/: test.yml
src/: lib.rs
