[package]
name = "figment-directory-adapter"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
figment = "0.10.19"

[dev-dependencies]
figment = { version = "0.10.19", features = ["toml", "test"] }
serde = { version = "1", features = ["derive"] }
