[package]
name = "figment-directory"
version = "0.2.0"
edition = "2021"
license = "BSD-3-Clause"
authors = ["Andreas Molitor <andreasewering@gmx.de>"]
documentation = "https://docs.rs/figment-directory/0.1"
description = "Figment provider for config values split into multiple files in a directory, working with any format."
repository = "https://github.com/anmolitor/figment-directory"
readme = "README.md"
keywords = ["config", "configuration", "directory"]
categories = ["config"]


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
include-dir = ["include_dir"]

[dependencies]
figment = "0.10.19"
include_dir = { version = "0.7.4", optional = true }

[dev-dependencies]
figment = { version = "0.10.19", features = ["toml", "test"] }
serde = { version = "1", features = ["derive"] }
